[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "blnk-py"
version = "0.2.0a3"
description = "Async Python SDK for the Blnk ledger & reconciliation API (typed, Pydantic)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name="Maintainers", email="maintainers@example.org" }]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7,<3",
  "typing-extensions>=4.9.0"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy", "python-dotenv", "fastapi", "uvicorn"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["blnk_py"]
